2005-08-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Include glib_on_error_halt.
	
	* glib/abicheck.sh: Also check exported variables.

2005-08-05  Manish Singh  <yosh@gimp.org>

	* tests/refcount/closures.c: remove unused n_threads variable.

2005-08-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.7.7 ===

	* NEWS: Updates

2005-08-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/gatomic.[hc]: Always export g_atomic_int_get and
	g_atomic_pointer_get as functions, even if we have macros,
	to avoid changing the ABI depending on configuration.
	
	* glib/gatomic.c: Fix the s390 implementations of 
	g_atomic_pointer_compare_and_exchange.

2005-08-04  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.h: Move the G_BEGIN_DECLS/G_END_DECLS pair outside
	the #if/#else/#endif block. Otherwise we had G_BEGIN_DECLS without
	matching G_END_DECLS on Unix, and G_END_DECLS without matching
	G_BEGIN_DECLS on Win32.

2005-08-03  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.7.6 ===

	* NEWS: Updates

2005-08-03  Ross Burton  <ross@burtonini.com>

	* docs/reference/glib/tmpl/windows.sgml:
	Add a long description, pointing people at Cygwin for a complete
	Unix library.

	* glib/gutils.c:
	Document return value of g_get_host_name().

2005-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gatomic.c: Add native atomic operations
	for s390.

	* configure.in: ... and use them on s390.

2005-08-03  Ross Burton  <ross@burtonini.com>

	* glib/gstdio.c:
	Fix DocBook tag typo. (#311966)

2005-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstdio.h: Add G_BEGIN_DECLS/G_END_DECLS.  (#312424)

2005-08-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.c (g_convert_with_iconv): Don't go in an
	infinite loop if the input text ends in an incomplete multibyte
	character.  (#312402, Sebastien Bacher)

	* Bump version

	* === Released 2.7.5 ===
