@@ -67,6 +67,7 @@ test_programs =					\
 	$(CXX_TEST)				\
 	child-test				\
 	completion-test				\
+	convert-test				\
 	date-test				\
 	dirname-test				\
 	file-test				\
@@ -123,6 +124,7 @@ atomic_test_LDADD = $(progs_ldadd)
 array_test_LDADD = $(progs_ldadd)
 child_test_LDADD = $(thread_ldadd)
 completion_test_LDADD = $(progs_ldadd)
+convert_test_LDADD = $(progs_ldadd)
 date_test_LDADD = $(progs_ldadd)
 dirname_test_LDADD = $(progs_ldadd)
 file_test_LDADD = $(progs_ldadd)
